--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 600px;
+    background-blend-mode: lighten;
 }
 
 .jumbotron-content {
@@ -13,24 +14,16 @@
 
 .jumbotron-title {
     color: #33384e;
-    font-size: 60px !important;
-    font-weight: 700 !important;
+    font-size: 55px !important;
+    font-weight: bolder !important;
     text-align: left;
 }
 
 .jumbotron-body {
     color: #33384e;
     font-size: 30px !important;
-    font-weight: 550 !important;
+    font-weight: 600 !important;
     font-family: 'Avenir LT Std 35 Light';
-}
-
-.col-title {
-    font-size: 50px !important;
-}
-
-.col-text {
-    font-size: 25px !important;
 }
 
 .img-shadow {
