--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,24 @@
-.navbar li{
-    font-size: 1.25em !important;
+#navbar {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 6px 10px;
+    transition: 0.4s; 
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 99;
 }
+
+@media screen and (max-width: 580px) {
+    #navbar {
+        padding: 6px 10px !important; 
+    }
+    #navbar a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    #navbar-right {
+        float: none;
+    }
+} 
