--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,3 +2,19 @@ strong {
     font-family: 'Avenir LT Std 65 Medium';
     letter-spacing: 0.5px;
 }
+
+.footerfooter {
+    height: 60px;
+    width: 100%;
+    line-height: 60px;
+    background-color: #f5f5f5;
+} 
+
+.footer-content {
+    text-align: center;
+}
+
+.footer-image {
+    height: 75px;
+    width: 160px;
+}
