--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotron-title {
-    color: #B22F37;
+    color: #2F4785;
     font-size: 55px !important;
     font-weight: 800 !important;
     font-family: 'Avenir LT Std 65 Medium';
@@ -28,10 +28,9 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.card-img-top-2 {
+.fas-card {
     margin-top: 10%;
-    width: 125px;
-    height: 125px;
+    font-size: 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -45,6 +44,10 @@
     border: none;
     padding-bottom: 0% !important;
     margin-bottom: 0% !important;
+}
+
+.card-descriptions {
+    color: white;
 }
 
 .card-title {
@@ -64,6 +67,10 @@
     padding-bottom: 5%;
 }
 
+.card-title {
+    padding-top: 5% !important;
+}
+
 .doctor-image {
     width: 180px;
     height: 195px;
@@ -71,4 +78,12 @@
 
     margin: auto;
     padding-top: 10px;
+}
+
+.doctor-cards {
+    color: #3156A4;
+}
+
+.card-img-top-2 {
+    color: rgb(255, 255, 255) !important;
 }
