--- a/css/home.css
+++ b/css/home.css
@@ -12,10 +12,19 @@
 
 .jumbotron-title {
     color: #2F4785;
-    font-size: 55px !important;
+    font-size: 60px !important;
     font-weight: 800 !important;
     font-family: 'Avenir LT Std 65 Medium';
     text-align: left;
+}
+
+.jumbotron-subtitle {
+    color: rgb(202, 99, 106);
+    font-size: 40px !important;
+    font-weight: 800 !important;
+    font-family: 'Avenir LT Std 65 Medium';
+    text-align: left;
+    padding-bottom: 2%;
 }
 
 .jumbotron-body {
@@ -80,7 +89,7 @@
 }
 
 .doctor-cards {
-    color: #3156A4;
+    color: #B32E36;
 }
 
 .card-img-top-2 {
