--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 .cover-page {
-    background: url('../assets/images/background7.webp');
-    background-position: center;
+    background: url('../assets/images/home.jpg');
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: lighten;
@@ -19,7 +19,7 @@
 }
 
 .jumbotron-subtitle {
-    color: rgb(202, 99, 106);
+    color: #0284CF;
     font-size: 40px !important;
     font-weight: 800 !important;
     font-family: 'Avenir LT Std 65 Medium';
@@ -51,7 +51,6 @@
 
 .card {
     border: none;
-    margin-bottom: 3% !important;
 }
 
 .card-descriptions {
@@ -72,11 +71,7 @@
 
 .description-cards {
     padding-top: 5%;
-    padding-bottom: 5%;
-}
-
-.card-title {
-    padding-top: 5% !important;
+    padding-bottom: 0%;
 }
 
 .doctor-image {
@@ -89,9 +84,21 @@
 }
 
 .doctor-cards {
-    color: #B32E36;
+    color: #43B3E5;
 }
 
 .card-img-top-2 {
     color: rgb(255, 255, 255) !important;
+}
+
+.testimonial-card {
+
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%232F4785' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%232F4785' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
